# FastAPI-Extra

./: README.md  pyproject.toml
fastapi_extra/middleware/: mutual_tls.py  tenant_middleware.py
fastapi_extra/middleware/mongoengine/: tenant_db_middleware.py
fastapi_extra/service/: basic_service_client.py
fastapi_extra/shcema/: custom_error.py  response_wrapper.py
fastapi_extra/utils/: __init__.py  aiohttp_client.py  custom_exception_handler.py  environment_settings.py  mongodb_service.py  wrapper_response.py
fastapi_extra/utils/core/: __init__.py  singleton.py  startup_shutdown_events.py
fastapi_extra/utils/sync/: __init__.py  current_thread_executor.py  local.py  sync.py
tests/: test_fastapi_extra.py
